Fix Java 17 code issues (#340)